<resources>
    <string name="app_name">Maize Price Predictor</string>
    <string name="title_home">Home</string>
    <string name="title_trend">Trends</string>
    <string name="title_settings">Settings</string>
    <string name="new_price">Tsh 3200.0</string>
    <string name="change_in_price">+Tsh 600.0</string>
    <string name="timePosted">6:45am</string>
    <string name="datePosted">6th Thursday June 2023</string>
    <string name="prediction_month">JULY, 2023</string>
    <string name="news">NEWS</string>
    <string name="news_heading1">Diesel kupanda bei mwezi ujao.</string>
    <string name="news_heading2">Mbolea kushuka bei.</string>
    <string name="news_heading3">Ongezeko la uhitaji wa mchele kutoka nchi jirani.</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="Notification">Notifications</string>
    <string name="email_Notification">Email Notifications</string>
    <string name="Account">Account</string>
    <string name="sign_in">Hello, Welcome</string>
    <string name="sign_in_info">Provide details of your existing account to sign in.</string>
    <string name="sign_in_pg">Already an existing user? Sign In</string>
    <string name="sign_up_pg">Don\'t have an existing account? Sign Up Now</string>
    <string name="fg_PWD">Forgot Password?</string>
    <string name="editProfile">Edit Account</string>
    <string name="location">Location</string>
    <string name="help">Help and Support</string>
    <string name="contacts">Contact us: evanclevan@gmail.com</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="register_info">Please fill all the fields below to sign in.</string>
    <string name="prompt_username">Username</string>
    <string name="Sign_up_title">Set up your account</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_register">REGISTER</string>
    <string name="action_sign_in_short">LOGIN</string>
    <string name="action_sign_in">Sign in</string>
    <string name="sign_out">Log Out</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="t1">(6 minutes ago)</string>
    <string name="t2">(1hr ago)</string>
    <string name="t3">(2hrs ago)</string>
    <string name="logo">logo</string>
    <string name="email_hint">Enter Email Address</string>
    <string name="pwdTitle">Reset Password</string>
    <string name="sendEmailButton">Send Email</string>
    <string name="pwdInfo">Enter an active email address. We will send instructions to reset password to it.</string>
    <string name="title_trends">CHARTS</string>
</resources>