<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <View
        android:id="@+id/PredictionsView"
        android:layout_width="362dp"
        android:layout_height="184dp"
        android:background="@drawable/stroke"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06" />

    <TextView
        android:id="@+id/newPriceView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:accessibilityLiveRegion="assertive"
        android:text="@string/new_price"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="#4CAF50"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/PredictionsView"
        app:layout_constraintEnd_toEndOf="@+id/PredictionsView"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintStart_toStartOf="@+id/PredictionsView"
        app:layout_constraintTop_toTopOf="@+id/PredictionsView"
        app:layout_constraintVertical_bias="0.083" />

    <TextView
        android:id="@+id/changePriceView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_in_price"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/PredictionsView"
        app:layout_constraintEnd_toEndOf="@+id/PredictionsView"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="@+id/PredictionsView"
        app:layout_constraintTop_toTopOf="@+id/PredictionsView"
        app:layout_constraintVertical_bias="0.584" />

    <TextView
        android:id="@+id/timeView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timePosted"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintBottom_toBottomOf="@+id/PredictionsView"
        app:layout_constraintEnd_toEndOf="@+id/PredictionsView"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintStart_toStartOf="@+id/PredictionsView"
        app:layout_constraintTop_toTopOf="@+id/PredictionsView"
        app:layout_constraintVertical_bias="0.878" />

    <TextView
        android:id="@+id/dateView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/datePosted"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="@+id/PredictionsView"
        app:layout_constraintEnd_toEndOf="@+id/PredictionsView"
        app:layout_constraintHorizontal_bias="0.782"
        app:layout_constraintStart_toStartOf="@+id/PredictionsView"
        app:layout_constraintTop_toTopOf="@+id/PredictionsView"
        app:layout_constraintVertical_bias="0.875" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prediction_month"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.126"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.001" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/news"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PredictionsView"
        app:layout_constraintVertical_bias="0.042" />

    <View
        android:id="@+id/NewsView"
        android:layout_width="368dp"
        android:layout_height="195dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/stroke"
        android:fadeScrollbars="true"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PredictionsView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="@string/news_heading2"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintEnd_toEndOf="@+id/NewsView"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="@+id/NewsView"
        app:layout_constraintTop_toTopOf="@+id/NewsView" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        android:text="@string/news_heading3"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintEnd_toEndOf="@+id/NewsView"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintStart_toStartOf="@+id/NewsView"
        app:layout_constraintTop_toTopOf="@+id/NewsView" />

    <View
        android:id="@+id/divider"
        android:layout_width="320dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="@+id/NewsView"
        app:layout_constraintEnd_toEndOf="@+id/NewsView"
        app:layout_constraintStart_toStartOf="@+id/NewsView"
        app:layout_constraintTop_toTopOf="@+id/NewsView"
        app:layout_constraintVertical_bias="0.317" />

    <View
        android:id="@+id/divider2"
        android:layout_width="320dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="@+id/NewsView"
        app:layout_constraintEnd_toEndOf="@+id/NewsView"
        app:layout_constraintStart_toStartOf="@+id/NewsView"
        app:layout_constraintTop_toTopOf="@+id/NewsView"
        app:layout_constraintVertical_bias="0.662" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/news_heading1"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintEnd_toEndOf="@+id/NewsView"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="@+id/NewsView"
        app:layout_constraintTop_toTopOf="@+id/NewsView" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/t1"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/NewsView"
        app:layout_constraintVertical_bias="0.476" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/t2"
        app:layout_constraintBottom_toTopOf="@+id/divider2"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintVertical_bias="0.468" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/t3"
        app:layout_constraintBottom_toBottomOf="@+id/NewsView"
        app:layout_constraintEnd_toEndOf="@+id/NewsView"
        app:layout_constraintTop_toTopOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.678" />
</androidx.constraintlayout.widget.ConstraintLayout>